<resources>
    <string name="app_name">RecyclerView</string>
    <string name="nama">Muhammad Alfauzan</string>
    <string name="email">muhmmadalfauzan254@gmail.com</string>
    <string name="pempek">Pempek Teri dan Kuah Cuko</string>
    <string name="logo">Logo</string>
    <string name="bg">background</string>
    <string name="kue">Kue Nona Manis</string>
    <string name="profile">Profile</string>
    <string name="cara_membuat"><![CDATA[ 1 : Campur telur dan gula pasir aduk rata masukan terigu dan garam tuang santan aduk rata lalu saring sisihkan dahulu\n
        2 : campur maizena, gula pasir, garam tuang santan lalu aduk rata masukan pasta pandan aduk sampai tercampur rata\n
        Masak dengan api sedang sampai meletup letup lalu campur bahan 1 yang tadi aduk rata, ini sy pindah wadah krn ga muat 😊 sisihkan dahulu\n
        di panci campur terigu, gula pasir dan garam tuang santan aduk rata masak dengan api sedang sambil terus diaduk sampai meletup letup\n
        Tuang bahan 3 ke dalam botol kecap untuk mempermudah saat menuang, oles cetakan dengan minyak goreng\n
        Isi cetakan dengan warna hijau sebanyak 3/4 tinggi cetakan lalu semprotkan warna putih ditengah2 warna hijau\n
        Kukus selama 20-25 menit dengan api sedang setelah matang angkat biarkan hangat baru keluarkan dari cetakan\n
        Waktunya menghidangkang selamat mencoba..
        ]]></string>
    <string name="bahan"><![CDATA[
            - 2 cup beras ketan putih\n
            - 3 cup takaran beras air biasa\n
           - 1 bungkus santan kara (65ml)\n
           - 2 lembar daun pandan\n
           - 1/4 sdt garam\n
           - Bahan Vla*\n
           - 300 ml air biasa\n
           - 1 bungkus santan kara (65 ml)\n
           - 3 sdt gula pasir\n
           - 1/4 sdt garam\n
           - Sejumput bubuk vanili\n
           - 1 sdm tepung maizena\n
            \t\tToping\n
           - secukupnya Mangga\n
           - secukupnya Wijen sangrai\n
           - secukupnya Keju ]]></string>
    <string name="save">Simpan</string>
    <string name="image">Image food</string>
    <string name="cara_membuatt">Cara Membuat</string>
    <string name="bahan_bahan">Bahan-Bahan :</string>
    <string-array name="data_food">
        <item>Kue nona manis </item>
        <item>Mochi Lava aka Mochi Lumer|Makanan Kekinian|Ide bakulan </item>
        <item>Mango sticky rice / mangga ketan vla </item>
        <item>Salad Buah </item>
        <item>Chicken Steak Viral </item>
        <item>Soto Betawi</item>
        <item>Pudding Caramel Kukus</item>
        <item>Udang Saus Tiram</item>
        <item>Fillet Ayam Marinasi Saus Asam Manis</item>
        <item>Dadar gulung isi kelapa</item>

    </string-array>
    <string-array name="data_Bahan">
        <item> <![CDATA[
                500 ml santan kental\n
                6 sdm terigu\n
                Sejumput garam\n
                250 ml santan kental\n
                40 gram gula pasir (2 sdm)\n
                30 gram maizena (2,5 sdm)\n
                1 sdt pasta pandan (secukupnya)\n
                Sejumput garam\n
                250 ml santan kental\n
                1 butir telur\n
                80 gram gula pasir (4 sdm)\n
                140 gram terigu (1 gelas blimbing + 1 sdm munjung)]]></item>

        <item> <![CDATA[
                250 gr tepung ketan putih\n
                10 gr tepung maizena\n
                Secukupnya garam\n
                65 gr gula pasir\n
                1 bungkus SKM putih dicampur air total jadi 375ml\n
                1 sdm pasta susu\n
                3 sdm minyak goreng\n
                Secukupnya maizena sangrai untuk baluran\n
                Saos coklat\n
                1 bungkus MyVla instan, bebas mau rasa vanila atau coklat\n
                300 ml air, bisa diganti susu cair kalo mau\n
                40-50 gr DCC\n
                1 sdm coklat bubuk\n
                1-2 sdm gula pasir, sesuai selera ]]></item>

        <item> <![CDATA[
            2 cup beras ketan putih\n
            3 cup takaran beras air biasa\n
            1 bungkus santan kara (65ml)\n
            2 lembar daun pandan\n
            1/4 sdt garam\n
            300 ml air biasa\n
            1 bungkus santan kara (65 ml)\n
            3 sdt gula pasir\n
            1/4 sdt garam\n
            Sejumput bubuk vanili\n
            1 sdm tepung maizena\n
            secukupnya Mangga\n
            secukupnya Wijen sangrai\n
            secukupnya Keju ]]> </item>

        <item> <![CDATA[
            30 bh anggur\n
            20 bh strawberry 1 bh kiwi\n
            2 bh apel fuji\n
            Secukupnya nata de coco\n
            Secukupnya keju parut\n
            300 ml mayonaise\n
            450 gr yogurt plain\n
            160 gr SKM
         ]]></item>

        <item><![CDATA[
                1 Potong Paha Ayam Tanpa Tulang\n
                1 Buah Wortel (Potong Panjang)\n
                6 Buah Buncis (Potong Panjang)\n
                1 Buah Kentang (Potong Panjang)\n
                1 Bungkus Bumbu Baberque (Aku Del Monte)\n
                Secukupnya Lada Hitam\n
                Secukupnya Air\n
                Secukupnya Gula\n
                Secukupnya Garam / Penyedap\n
                Secukupnya Saus Tomat\n
                Secukupnya Butter / Margarine
                ]]>
        </item>
        <item><![CDATA[
            500 gr daging sengkel\n
            100 ml santan kental\n
            450 ml susu uht plan\n
            2 sdm minyak samin (WAJIB)\n
            500 gr kentang\n
            4 buah tomat merah potong\n
            3 batang sereh geprek\n
            3 lbr daun salam\n
            2 lbr daun jeruk\n
            3 cm lengkuas geprek\n
            4 cm kayu manis\n
            1 sdt lada bubuk\n
            secukupnya penyedap bubuk\n
            \tBumbu Halus\n
            10 siung bawang merah\n
            10 siung bawang putih\n
            5 butir kemiri\n
            2 sdm ketumbar\n
            1/2 sdr jinten\n
            3 ruas jahe
        ]]></item>
        <item> 3 SDM gula pasir\n
            2 SDM air panas>\n
            2 butir telur\n
            250 ml Susu Cair fullcream\n
            4 SDM susu kental manis\n
            1 SDT pasta vanila</item>

        <item>
            250 gram udang\n
            1 buah wortel\n
            1/2 bawang bombay\n
            8 butir bawang putih\n
            1 cabe merah (jika ingin pedas tambahkan 5 rawit merah)\n
            1/2 tomat\n
            2 SDM saus tiram\n
            Garam, gula, penyedap
        </item>
        <item>
            250 gram fillet dada ayam\n
            1/2 sachet bumbu marinasi desaku\n
            1 sdm air\n
            1 sdm maizen\n
            1/4 bawang bombay\n
            1/4 paprika kuning\n
            1/4 paprika merah\n
            1/4 paprika hijau\n
            1 sdm margarin\n
            1,5 sdm saus tomat\n
            1/2 sdt cuka\n
            1/2 sdm gula\n
            1/2 sdm kecap asin\n
            1/2 sdt maizena\n
            1/4 sdt lada bubuk\n
            70 ml air\n
            1/4 sdt bawang putih bubuk\n
            Toping 1 sdm wijen sangrai\n
        </item>
        <item>
            250 gr tepung terigu\n
            20 gr tepung tapioka\n
            65 ml santan cair (kara/sasa)\n
            600 ml air\n
            10 ml minyak goreng\n
            1 butir telur ayam\n
            Bahan unti kelapa\n
            4 pcs Gula merah\n
            1/2 butir kelapa parut\n
            100 gr gula putih\n
            secukupnya Air\n
            Sejumput garam
        </item>
    </string-array>
</resources>